# synapse-brain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  bootstrap.json  config.template.yaml  cortex.py  deploy.sh  federation.py  knowledge_wall.py  launch_swarm.py  mcp_server.py  pyproject.toml  requirements.txt  spore.py
.synapse-backup/: spore-000.enc  spore-001.enc  spore-002.enc  spore-003.enc  spore-004.enc  spore-005.enc  spore-006.enc
command-center/: README.md  app.py
command_center/: app.py
docs/: ARCHITECTURE.md  BRAIN-PROTOCOL.md  CONVERGENCE.md  INFRASTRUCTURE-MAP.md  SELF-EVOLUTION.md
synapse_brain/: __init__.py  cli.py
synapse_brain/cortex/: __init__.py  decomposer.py  orchestrator.py  protocol.py
synapse_brain/dashboard/: __init__.py  server.py
synapse_brain/dashboard/static/: index.html
synapse_brain/deployers/: __init__.py  cloudflare_worker.py  hf_space.py  oracle_cloud.py  render.py
synapse_brain/mesh/: __init__.py  gossip.py  server.py
synapse_brain/providers/: __init__.py  router.py
synapse_brain/spore/: __init__.py  runtime.py
tests/: test_spore.py
