[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-brain"
version = "0.1.0"
description = "Distributed reasoning swarm with mathematically guaranteed convergence"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ryan Gillespie", email = "rgillespie83@icloud.com"}]
dependencies = [
    "crdt-merge>=0.9.5",
    "httpx>=0.27",
    "msgpack>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
oracle = ["paramiko>=3.4"]
hf = ["gradio>=4.0", "huggingface-hub>=0.20"]
cloudflare = ["cloudflare>=3.0"]
llm = [
    "openai>=1.0",
    "google-genai>=1.0",
    "groq>=0.4",
    "mistralai>=1.0",
]
all = ["synapse-brain[oracle,hf,cloudflare,llm]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "hypothesis>=6.0"]

[project.scripts]
synapse-brain = "synapse_brain.cli:main"
spore = "synapse_brain.spore.runtime:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
